<resources>
    <string name="app_name">TaskTimer</string>
    <string name="action_settings">Settings</string>
    <string name="add_task">Add Task</string>
    <string name="duration_report">Duration Report</string>
    <string name="about_tasktimer">About TaskTimer</string>
    <string name="generate_data">Generate Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_button">Delete Button</string>
    <string name="edit_button">Edit Button</string>
    <string name="task_name_required">Task name: Required</string>
    <string name="task_description_optional">Task description: optional</string>
    <string name="order_sort_low_to_high">Order: sort low to high</string>
    <string name="save">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
</resources>
