<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.coding_cole.tasktimer.MainActivity">
    <item
        android:id="@+id/menumain_addTask"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/add_task"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menumain_showDuration"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="101"
        android:title="@string/duration_report"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menumain_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menumain_showAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="103"
        android:title="@string/about_tasktimer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_generate"
        android:orderInCategory="104"
        android:title="@string/generate_data"
        app:showAsAction="never"
        android:visible="false"/>
</menu>
